--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <link href="/index.xml" rel="alternate" type="application/rss+xml" title="My Portfolio">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-  
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/github-dark.min.css" integrity="sha512-rO+olRTkcf304DQBxSWxln8JXCzTHlKnIdnMUwYvQa9/Jd4cQaNkItIUj6Z4nvW1dqK0SKXLbn9h4KwZTNtAyw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <link rel="manifest" href="/web.webmanifest">
@@ -84,6 +84,21 @@ function myFunction() {
 
 </head>
 
+
+<style>
+  #intro {
+    text-align: justify;
+    text-justify: inter-word;
+    width: 85%;
+  }
+
+   
+  @media only screen and (max-width: 600px) {
+    #intro {
+      width: 100%;
+    }
+  }
+</style>
 
 <body id="theme">
   <article class="posts">
@@ -135,7 +150,7 @@ function myFunction() {
             Hello World, Perkenalkan 👋
           </h1>
 
-          <p style="text-align: justify !important; width: 85%;">
+          <p id="intro">
             Saya <b>Andika Tulus Pangestu</b>, sering dipanggil <b>"Andika"</b> atau <b>"Tulus"</b>.
             Seorang pria yang sangat menyukai perkembangan dunia teknologi, mencoba belajar coding, sambil menyeruput kopi dan tentunya diiringi musik yang saya sukai.
             <br><br>
